--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,64 @@
 
 <body>
   <div id="root">
-    <div class="content-wrapper">
-      <header>
-        header
+    <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200 ">
+      <header class="py-6 mx-10">
+        <nav class="flex flex-row justify-between items-center">
+          <div class="logo basis-2/6 text-center font-semibold text-xl cursor-pointer">
+            CoffeeStyle.
+          </div>
+          <ul class="flex basis-3/6 justify-between items-center uppercase text-sm font-medium text-gray-500">
+            <li class="ct-top-menu-item">
+              <a href="">
+                Home
+              </a>
+            </li>
+            <li class="ct-top-menu-item">
+              <a href="">
+                Our Products
+              </a>
+            </li>
+            <li class="ct-top-menu-item">
+              <a href="">
+                Blog
+              </a>
+            </li>
+            <li class="ct-top-menu-item">
+              <a href="">
+                About
+              </a>
+            </li>
+            <li class="ct-top-menu-item">
+              <a href="">
+                Contact
+              </a>
+            </li>
+            <li class="ct-top-menu-item">
+              <a href="">
+                StyleGuide
+              </a>
+            </li>
+          </ul>
+
+          <ul class="basis-1/6 flex justify-start items-center ml-20 text-gray-500 uppercase text-sm font-medium">
+            <li class="ct-top-menu-item">
+              <a href="" class="flex items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="ct-icon">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+                </svg>
+
+                <span class="mx-2">
+                  Cart
+                </span>
+
+                <span class="ct-badge-circle bg-gray-500 text-white">10</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
       </header>
 
       <main>
